countup js seperated

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/fakeLoader.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/countup.js"></script>
 
 </body>
 </html>
